# mcp-realtime-chainlit

./: .env  .env.sample  .gitignore  LOGO_GUIDE.md  README.md  chainlit_config.py  chat.py  mcp_service.py  pyproject.toml  realtime.py  requirements.txt  test_mcp.py
.chainlit/: config.toml
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/workflows/: codespaces.yml
locales/en/: translation.json
locales/ko/: translation.json
prompts/: if_wrong_input.md  input.md  output.md
public/: convert-favicon.html  logo-preview.html
public/reference_images/: README.md
