[project]
name = "chainlit-realtime"
version = "0.1.0"
description = "OpenAI Realtime Agents UI"
requires-python = ">=3.12"
dependencies = [
    "azure-identity==1.19.0",
    "python-dotenv==1.0.1",
    "chainlit==2.6.2",
    "websockets==14.0",
    "invoke==2.2.0",
    "numpy==1.26.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
